// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[glob] basic case: defineMessages -> stdout 1`] = `
Object {
  "ae494": Object {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "app.home.kittens": Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "escaped.apostrophe": Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "ignore": Object {
    "defaultMessage": "ignore",
  },
  "inline-msg": Object {
    "defaultMessage": "inline message",
    "description": "inline description",
  },
  "trailing.ws": Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
  },
}
`;

exports[`basic case: defineMessages -> out-file 1`] = `
Object {
  "ae494": Object {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "app.home.kittens": Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "escaped.apostrophe": Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "inline-msg": Object {
    "defaultMessage": "inline message",
    "description": "inline description",
  },
  "trailing.ws": Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
  },
}
`;

exports[`basic case: defineMessages -> out-file with location 1`] = `
Object {
  "ae494": Object {
    "col": 18,
    "defaultMessage": "No ID",
    "description": "no ID",
    "end": 937,
    "file": "defineMessages/actual.js",
    "line": 34,
    "start": 876,
  },
  "app.home.kittens": Object {
    "col": 10,
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "end": 522,
    "file": "defineMessages/actual.js",
    "line": 15,
    "start": 372,
  },
  "escaped.apostrophe": Object {
    "col": 10,
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "end": 786,
    "file": "defineMessages/actual.js",
    "line": 25,
    "start": 662,
  },
  "foo.bar.baz": Object {
    "col": 9,
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "end": 246,
    "file": "defineMessages/actual.js",
    "line": 5,
    "start": 141,
  },
  "foo.bar.biff": Object {
    "col": 10,
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "end": 360,
    "file": "defineMessages/actual.js",
    "line": 10,
    "start": 258,
  },
  "inline-msg": Object {
    "col": 10,
    "defaultMessage": "inline message",
    "description": "inline description",
    "end": 1416,
    "file": "defineMessages/actual.js",
    "line": 53,
    "start": 1269,
  },
  "trailing.ws": Object {
    "col": 21,
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
    "end": 650,
    "file": "defineMessages/actual.js",
    "line": 20,
    "start": 545,
  },
}
`;

exports[`basic case: defineMessages -> stdout 1`] = `
Object {
  "ae494": Object {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "app.home.kittens": Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "escaped.apostrophe": Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "inline-msg": Object {
    "defaultMessage": "inline message",
    "description": "inline description",
  },
  "trailing.ws": Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
  },
}
`;

exports[`basic case: help 1`] = `
"Usage: formatjs extract [options] [files...]

Extract string messages from React components that use react-intl.
The input language is expected to be TypeScript or ES2017 with JSX.

Options:
  --format <path>                                       Path to a formatter file that controls the shape of JSON file from \`--out-file\`.
  The formatter file must export a function called \`format\` with the signature
  \`\`\`
  type FormatFn = <T = Record<string, MessageDescriptor>>(
    msgs: Record<string, MessageDescriptor>
  ) => T
  \`\`\` 
  This is especially useful to convert from our extracted format to a TMS-specific format.
  
  --out-file <path>                                     The target file path where the plugin will output an aggregated \`.json\` file of allthe translations from the \`files\` supplied.
  --id-interpolation-pattern <pattern>                  If certain message descriptors don't have id, this \`pattern\` will be used to automatically
  generate IDs for them. Default to \`[contenthash:5]\` where \`contenthash\` is the hash of
  \`defaultMessage\` and \`description\`.
  See https://github.com/webpack/loader-utils#interpolatename for sample patterns (default: \\"[contenthash:5]\\")
  --extract-source-location                             Whether the metadata about the location of the message in the source file should be extracted. If \`true\`, then \`file\`, \`start\`, and \`end\` fields will exist for each extracted message descriptors. (default: false)
  --remove-default-message                              Remove \`defaultMessage\` field in generated js after extraction (default: false)
  --additional-component-names <comma-separated-names>  Additional component names to extract messages from, e.g: \`['FormattedFooBarMessage']\`. **NOTE**: By default we check for the fact that \`FormattedMessage\` is imported from \`moduleSourceName\` to make sure variable alias works. This option does not do that so it's less safe.
  --extract-from-format-message-call                    Opt-in to extract from \`intl.formatMessage\` call with the same restrictions, e.g: has to be called with object literal such as \`intl.formatMessage({ id: 'foo', defaultMessage: 'bar', description: 'baz'})\` (default: true)
  --ignore <files>                                      List of glob paths to **not** extract translations from.
  --throws                                              Whether to throw an exception when we fail to process any file in the batch.
  --pragma <pragma>                                     parse specific additional custom pragma. This allows you to tag certain file with metadata such as \`project\`. For example with this file:
  
        \`\`\`
        // @intl-meta project:my-custom-project
        import {FormattedMessage} from 'react-intl';
  
        <FormattedMessage defaultMessage=\\"foo\\" id=\\"bar\\" />;
        \`\`\`
  
        and with option \`{pragma: \\"@intl-meta\\"}\`, we'll parse out \`// @intl-meta project:my-custom-project\` into \`{project: 'my-custom-project'}\` in the result file.
  -h, --help                                            display help for command
"
`;

exports[`duplicated descriptor ids shows warning 1`] = `
Object {
  "foo": Object {
    "defaultMessage": "Bar",
  },
}
`;

exports[`ignore -> stdout JS 1`] = `
Object {
  "ae494": Object {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "app.home.kittens": Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "escaped.apostrophe": Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "ignore": Object {
    "defaultMessage": "ignore",
  },
  "inline-msg": Object {
    "defaultMessage": "inline message",
    "description": "inline description",
  },
  "trailing.ws": Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
  },
}
`;

exports[`ignore -> stdout TS 1`] = `
Object {
  "ae494": Object {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "app.home.kittens": Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "c63ed": Object {
    "defaultMessage": "No Desc",
  },
  "escaped.apostrophe": Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "inline": Object {
    "defaultMessage": "formatted message",
    "description": "foo",
  },
  "trailing.ws": Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
  },
}
`;

exports[`typescript -> stdout 1`] = `
Object {
  "ae494": Object {
    "defaultMessage": "No ID",
    "description": "no ID",
  },
  "app.home.kittens": Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
  },
  "c63ed": Object {
    "defaultMessage": "No Desc",
  },
  "escaped.apostrophe": Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
  },
  "foo.bar.baz": Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
  },
  "foo.bar.biff": Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
  },
  "inline": Object {
    "defaultMessage": "formatted message",
    "description": "foo",
  },
  "trailing.ws": Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
  },
}
`;

exports[`typescript -> stdout with formatter 1`] = `
Object {
  "ae494": Object {
    "comment": "no ID",
    "string": "No ID",
  },
  "app.home.kittens": Object {
    "comment": "Counts kittens",
    "string": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
  },
  "c63ed": Object {
    "string": "No Desc",
  },
  "escaped.apostrophe": Object {
    "comment": "Escaped apostrophe",
    "string": "A quoted value ''{value}'",
  },
  "foo.bar.baz": Object {
    "comment": "The default message",
    "string": "Hello World!",
  },
  "foo.bar.biff": Object {
    "comment": "Another message",
    "string": "Hello Nurse!",
  },
  "inline": Object {
    "comment": "foo",
    "string": "formatted message",
  },
  "trailing.ws": Object {
    "comment": "Whitespace",
    "string": "   Some whitespace   ",
  },
}
`;
